@@ -2,6 +2,7 @@
 =========================
 New Features:
 
+- #46: Added plugin.activate() to provide plugins with the ability to control what happens upon activation
 - #40: Added test context support - you can now decorate tests to provide externally implemented contexts for more flexible setups
 
 
